feat: github oauth, testing and minor improvements
