# docs/swagger.json
@@ -40,7 +40,7 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/LoginResponse"
+              "$ref": "#/definitions/GithubLoginResponse"
             }
           }
         }
@@ -96,7 +96,7 @@
           "example": 1
         }
       },
-      "x-go-package": "jsbnch/pkg/middleware"
+      "x-go-package": "touchstone-api/pkg/middleware"
     },
     "GenericAPIError": {
       "description": "GenericAPIError is a wrapper for all API errors",
@@ -120,7 +120,7 @@
           "x-go-name": "Message"
         }
       },
-      "x-go-package": "jsbnch/pkg/middleware"
+      "x-go-package": "touchstone-api/pkg/middleware"
     },
     "GenericAPIResponse": {
       "description": "GenericAPIResponse is a wrapper for all API responses",
@@ -146,7 +146,7 @@
           "example": 1
         }
       },
-      "x-go-package": "jsbnch/pkg/middleware"
+      "x-go-package": "touchstone-api/pkg/middleware"
     },
     "LoginRequest": {
       "description": "LoginRequest represents request data for POST /login",
@@ -159,10 +159,10 @@
           "example": "ABCDEF"
         }
       },
-      "x-go-package": "jsbnch/pkg/user"
+      "x-go-package": "touchstone-api/pkg/user"
     },
-    "LoginResponse": {
-      "description": "LoginResponse represents response for POST /login",
+    "GithubLoginResponse": {
+      "description": "GithubLoginResponse represents response for POST /login",
       "type": "object",
       "properties": {
         "token": {
@@ -173,7 +173,7 @@
           "$ref": "#/definitions/User"
         }
       },
-      "x-go-package": "jsbnch/pkg/user"
+      "x-go-package": "touchstone-api/pkg/user"
     },
     "User": {
       "type": "object",
@@ -205,7 +205,7 @@
           "example": "spalt08"
         }
       },
-      "x-go-package": "jsbnch/pkg/model"
+      "x-go-package": "touchstone-api/pkg/model"
     }
   },
   "securityDefinitions": {
